Disable Qt OpenGL shader disk cache

There is an issue with Qt Quick and the shader caching mechanism which
may cause a crash on certain graphics drivers.

Ref: https://bugreports.qt.io/browse/QTBUG-64697